--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.1",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.2",
+    "npm": "^11.6.1",
     "validator": "^13.15.15"
   },
   "devDependencies": {
