--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.18.1",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.7",
     "npm": "^11.6.1",
     "validator": "^13.15.15"
   },
